# ultrahapticsgen

./: CMakeLists.txt  Streaming_CachedPoint_ctypes.cpp  arm64_error.txt  client.py  clientcpp.cpp  clientpp  generateTest.py  main.cpp  pymain.py  pymodel.py  sheetgenhap.csv  testsocket.py
cpp/: CMakeLists.txt  Streaming_Circle.cpp  Streaming_Line.cpp
saved_model/genhap_model/: keras_metadata.pb  saved_model.pb
saved_model/genhap_model/variables/: variables.data-00000-of-00001  variables.index
uhmultithread/: generateSamples.py  main.cpp  pymain.py  visualize.py
